--- a/index.css
+++ b/index.css
@@ -1,24 +1,133 @@
+@import url("https://fonts.googleapis.com/css2?family=Kumbh+Sans:wght@100..900&display=swap");
+
+* {
+  box-sizing: border-box;
+  margin: 0;
+  padding: 0;
+}
 body {
   display: flex;
   align-items: center;
   justify-content: center;
   min-height: 100vh;
+  background-image: linear-gradient(to bottom, #b068e9, #6463e7 147%);
 }
 main {
+  font-family: "Kumbh Sans", sans-serif;
   display: flex;
   flex-direction: column;
   gap: 1rem;
-  width: 30rem;
+  width: 327px;
+  position: relative;
+  background-color: #fff;
+  padding: 132px 24px 48px;
+  border-radius: 23px;
+  box-shadow: 0 50px 50px -20px rgba(53, 18, 122, 0.5);
+  margin: 108px 0 0;
 }
 .question-div {
   cursor: pointer;
-  border-bottom: 2px solid black;
+  border-bottom: 1px solid #e8e8ea;
 }
 .question-div-header {
   display: flex;
   align-items: center;
   justify-content: space-between;
+  padding-bottom: 18px;
+}
+.question:hover {
+  cursor: pointer;
+  color: #f47b56;
 }
 .answer {
   display: none;
+}
+.acordion-image {
+  position: absolute;
+  width: 237px;
+  top: -108px;
+  height: 180px;
+  left: 45px;
+}
+.image-shadow {
+  position: absolute;
+  width: 240px;
+  top: 0;
+  left: 45px;
+}
+.header {
+  font-size: 32px;
+  font-weight: bold;
+  font-stretch: normal;
+  font-style: normal;
+  line-height: normal;
+  letter-spacing: normal;
+  text-align: center;
+  margin-bottom: 38px;
+}
+.question {
+  font-size: 13px;
+  font-weight: normal;
+  font-stretch: normal;
+  font-style: normal;
+  line-height: normal;
+  letter-spacing: normal;
+  text-align: left;
+  color: #4b4c5f;
+}
+.answer {
+  width: 35ch;
+}
+.desktop-shadow {
+  display: none;
+}
+.desktop-image {
+  display: none;
+}
+.box {
+  display: none;
+}
+@media only screen and (min-width: 1440px) {
+  main {
+    width: 920px;
+    padding: 65px 95px 83px 475px;
+    margin: 0 0 0 42.1px;
+  }
+  .acordion-image {
+    width: 418px;
+  }
+  .question {
+    font-size: 14px;
+  }
+  .desktop-image {
+    display: block;
+    position: absolute;
+    top: 70px;
+    left: 0;
+    z-index: 2;
+  }
+  .acordion-image {
+    display: none;
+  }
+  .image-shadow {
+    display: none;
+  }
+  .desktop-shadow {
+    display: block;
+    position: absolute;
+    left: 0;
+    top: 0;
+    z-index: 1;
+  }
+  .box {
+    display: block;
+    position: absolute;
+    left: -93px;
+    top: 210px;
+    z-index: 3;
+  }
+  .header {
+    text-align: start;
+    margin-bottom: 43px;
+  }
 }
